# hssk-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  constraints.txt  pyproject.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
assets/sponsor/: README.md
config/: mapping.example.yaml  mapping.update.example.yaml
docs/: index.html
packaging/: hssk_gui.iss  hssk_gui.spec  launch.py  make_dmg.sh  runtime_hook_playwright.py
packaging/assets/: icon.icns
scripts/: gui_smoke.py
src/hssk/: __init__.py  cli.py  config.py  errors.py  events.py  licensing.py  logging_setup.py  maintenance.py  mapping.py  report.py  support_bundle.py
src/hssk/api/: adapters.py  client.py  exams.py  patients.py  record_id.py  records.py
src/hssk/auth/: browser_login.py  profile.py  token_store.py
src/hssk/excel/: coerce.py  reader.py  template.py
src/hssk/payload/: builder.py  models.py  templates.py  update_builder.py
src/hssk/pipeline/: ledger.py  lock.py  results.py  runner.py
src/hssk_gui/: app.py  banner.py  confirm_dialog.py  fonts.py  guide_dialog.py  i18n.py  legal_dialog.py  license_dialog.py  main_window.py  messages.py  preferences_dialog.py  render.py  results_panel.py  settings.py  sponsor_dialog.py  theme.py  update_check.py  update_download.py  worker_thread.py  workers.py
src/hssk_gui/components/: stepper.py
templates/: hssk_template.xlsx
tests/: conftest.py  test_adapters.py  test_browser_login.py  test_builder.py  test_cli.py  test_client_retry.py  test_coerce.py  test_config.py  test_delete.py  test_events.py  test_gui_auto_purge.py  test_gui_confirm_dialog.py  test_gui_guide.py  test_gui_i18n.py  test_gui_install_update.py  test_gui_license.py  test_gui_prefs.py  test_gui_recent.py  test_gui_sponsor.py  test_gui_stepper.py  test_gui_theme.py  test_gui_threads.py  test_gui_throttle.py  test_gui_validate_worker.py  test_ledger.py  test_licensing.py  test_lock.py  test_logging_setup.py  test_maintenance.py  test_mapping.py  test_mapping_save.py  test_patients_resolve.py  test_payload_models.py  test_pipeline.py  test_profile.py  test_reader.py  test_record_id.py  test_report.py  test_support_bundle.py  test_template.py  (+7 more)
tests/golden/: vi_messages_golden.json
