[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hssk-tools"
version = "0.1.0"
description = "Push nationwide health-checkup data from Excel into hososuckhoe.com.vn"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "hssk-tools" }]
dependencies = [
    "httpx>=0.27",
    "playwright>=1.45",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "platformdirs>=4.2",
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6.6",
    "types-PyYAML",
    "types-python-dateutil",
]

[project.scripts]
hssk = "hssk.cli:main"

[project.gui-scripts]
hssk-gui = "hssk_gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hssk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
packages = ["hssk", "hssk_gui"]
mypy_path = "src"
ignore_missing_imports = true
