[build-system]
requires = ["setuptools>=68,<83", "wheel<1"]
build-backend = "setuptools.build_meta"

[project]
name = "hssk-tools"
dynamic = ["version"]
description = "Push nationwide health-checkup data from Excel into hososuckhoe.com.vn"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "hssk-tools" }]
dependencies = [
    "httpx>=0.28",
    "playwright>=1.60",
    "keyring>=25",
    "openpyxl>=3.1",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.19",
    "python-dateutil>=2.9",
    "platformdirs>=4.10",
    "PySide6>=6.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-qt>=4.5",
    "respx>=0.23",
    "ruff>=0.15",
    "mypy>=2.1",
    "pyinstaller>=6.21",
    "types-PyYAML",
    "types-python-dateutil",
]

[project.scripts]
hssk = "hssk.cli:main"

[project.gui-scripts]
hssk-gui = "hssk_gui.app:main"

[tool.setuptools.dynamic]
version = { attr = "hssk.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hssk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
packages = ["hssk", "hssk_gui"]
mypy_path = "src"
ignore_missing_imports = true
